--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4",
     "vite": "^4.0.4"
@@ -22,5 +23,10 @@
     "@pixi/sound": "^5.0.0",
     "gsap": "^3.11.4",
     "pixi.js": "^7.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
