написал метод полёта, нужно написать метод падения

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
 		"noUnusedParameters": true, // Проверять на неиспользуемые параметры функций
 		"noImplicitReturns": true, // Проверять на неявный возврат из функций
 		"skipLibCheck": true, // Пропускать проверку библиотечных файлов
-		"noImplicitAny": true // Проверять на неявный any
+		"noImplicitAny": true, // Проверять на неявный any
+		"strictNullChecks": true, //запрещает использовать нулл и ундефаинд для типа
+		"noEmitOnError": true, //отключает возможноть выполнения кода. если в нём есть ошибки
 	},
 	"include": ["src"] // Директории, которые должны быть включены в компиляцию
 }
